# greenlight

./: .gitignore  Cargo.toml  Containerfile  Containerfile.microshift  Containerfile.rhel9  README.md  config.toml  config.yaml  flake.nix  greenlight.yaml  justfile
.github/workflows/: rust.yml
.nvim/lua/: lspconfig.lua
example-plugins/go/: flake.nix
example-plugins/go/plugin/: main.go
greenlight-cli/: Cargo.toml
greenlight-cli/src/: cli.rs  main.rs
greenlight-lib/: Cargo.toml
greenlight-lib/src/: config.rs  errors.rs  lib.rs  plugins.rs
greenlight-lib/src/checks/: check.rs  mod.rs  network.rs  rootfs.rs  services.rs  unit.rs
greenlight-lib/tests/: config_tests.rs
packaging/: config.toml  greenlight-required.service  greenlight-wanted.service  greenlight.spec
src/: checks.rs  config.rs  errors.rs  lib.rs
src/checks/: mod.rs
tests/: config_tests.rs  errors_tests.rs
