[package]
name = "greenlight-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
nix = { version = "0.29.0", features = ["fs"] }
rtnetlink = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
systemd-zbus = "5.2.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
zbus = "5.6.0"
