[package]
name = "greenlight-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
nix = { version = "0.29.0", features = ["fs"] }
rtnetlink = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.22"
tracing = "0.1.41"
# Optional Extism support
serde_json = { version = "1.0", optional = true }
extism = { version = "1.10.0", optional = true }

[features]
default = []
plugins = ["serde_json", "dep:extism"]
